Bug #19858
[rbd-mirror] failover and failback of unmodified image results in split-brain
% Done:
0%
Source:
Tags:
Backport:
kraken,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature:
Description
If an image is gracefully failed over and immediately failed back (demote A/promote B -> demote B/promote A), the image will immediately split brain. This is caused by the lack of any data in the site B journal which prevents site A from latching onto the image.
Related issues
History
#1 Updated by Jason Dillaman over 3 years ago
- Status changed from In Progress to Fix Under Review
#2 Updated by Mykola Golub over 3 years ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Jason Dillaman over 3 years ago
- Copied to Backport #19872: kraken: [rbd-mirror] failover and failback of unmodified image results in split-brain added
#4 Updated by Jason Dillaman over 3 years ago
- Copied to Backport #19873: jewel: [rbd-mirror] failover and failback of unmodified image results in split-brain added
#5 Updated by Nathan Cutler over 3 years ago
- Status changed from Pending Backport to Resolved