librbd: add no-op event when promoting an image

The rbd-mirror process needs an event in the journal
to properly detect the transition between primary and
non-primary state between peers.

Fixes: http://tracker.ceph.com/issues/19858
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 4031555dda7597d24e9eb04b9ff29173909586f7)

Conflicts:
	src/librbd/journal/DemoteRequest.cc: logic exists in Journal.cc

(cherry picked from commit 7970ec586bebd26b1ca4955136ad8f48bb833af6)

Conflicts:
	src/librbd/journal/PromoteRequest.[h|cc]: logic exists in Journal.cc
	src/librbd/journal/Types.[h|cc]: trivial resolution
	src/test/librbd/journal/test_mock_PromoteRequest.cc: does not exist